--- a/1.2/1.2.md
+++ b/1.2/1.2.md
@@ -24,18 +24,62 @@
 ### Задание 1. Создать Pod с именем hello-world
 
 1. Создать манифест (yaml-конфигурацию) Pod.
+```yml
+apiVersion: v1
+kind: Pod
+metadata:
+  name: hello-world
+spec:
+  containers:
+  - name: hello-world-1
+    image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
+    ports:
+    - containerPort: 8080
+```
 2. Использовать image - gcr.io/kubernetes-e2e-test-images/echoserver:2.2.
 3. Подключиться локально к Pod с помощью `kubectl port-forward` и вывести значение (curl или в браузере).
+```
+kubectl port-forward hello-world :8080
+```
 
 ------
 
 ### Задание 2. Создать Service и подключить его к Pod
 
 1. Создать Pod с именем netology-web.
+```yml
+apiVersion: v1
+kind: Pod
+metadata:
+  name: netology-web
+  labels:
+    app: netology
+spec:
+  containers:
+  - name: netology-web
+    image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
+    ports:
+    - containerPort: 8080
+```
 2. Использовать image — gcr.io/kubernetes-e2e-test-images/echoserver:2.2.
 3. Создать Service с именем netology-svc и подключить к netology-web.
+```yml
+apiVersion: v1
+kind: Service
+metadata:
+  name: netology-svc
+spec:
+  selector:
+    app: netology
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
+```
 4. Подключиться локально к Service с помощью `kubectl port-forward` и вывести значение (curl или в браузере).
-
+```
+kubectl port-forward svc/netology-svc 30080:80
+```
 ------
 
 ### Правила приёма работы
