--- a/1.2/1.2.md
+++ b/1.2/1.2.md
@@ -41,6 +41,10 @@ spec:
 ```
 kubectl port-forward hello-world :8080
 ```
+![1](https://github.com/joos-net/kuber-homeworks/blob/main/1.2/img/1.png)
+
+![2](https://github.com/joos-net/kuber-homeworks/blob/main/1.2/img/2.png)
+
 
 ------
 
@@ -76,10 +80,21 @@ spec:
       port: 80
       targetPort: 8080
 ```
+![3](https://github.com/joos-net/kuber-homeworks/blob/main/1.2/img/3.png)
 4. Подключиться локально к Service с помощью `kubectl port-forward` и вывести значение (curl или в браузере).
 ```
 kubectl port-forward svc/netology-svc 30080:80
 ```
+![4](https://github.com/joos-net/kuber-homeworks/blob/main/1.2/img/4.png)
+
+![5](https://github.com/joos-net/kuber-homeworks/blob/main/1.2/img/5.png)
+
+[pod.yml](https://github.com/joos-net/kuber-homeworks/blob/main/1.2/pod.yml)
+
+[pod2.yml](https://github.com/joos-net/kuber-homeworks/blob/main/1.2/pod2.yml)
+
+[service.yml](https://github.com/joos-net/kuber-homeworks/blob/main/1.2/service.yml)
+
 ------
 
 ### Правила приёма работы
