--- a/1.3/1.3.md
+++ b/1.3/1.3.md
@@ -61,17 +61,111 @@ spec:
 ```
 2. После запуска увеличить количество реплик работающего приложения до 2.
 3. Продемонстрировать количество подов до и после масштабирования.
+![1](https://github.com/joos-net/kuber-homeworks/blob/main/1.3/img/1.png)
 4. Создать Service, который обеспечит доступ до реплик приложений из п.1.
+```yml
+apiVersion: v1
+kind: Service
+metadata:
+  name: srv-netology
+spec:
+  selector:
+    app: netology
+  ports:
+    - name: nginx
+      protocol: TCP
+      port: 8080
+      targetPort: 80
+    - name: http-multitool
+      protocol: TCP
+      port: 1180
+      targetPort: 1180
+    - name: https-multitool
+      protocol: TCP
+      port: 11443
+      targetPort: 11443
+```
+![2](https://github.com/joos-net/kuber-homeworks/blob/main/1.3/img/2.png)
+![3](https://github.com/joos-net/kuber-homeworks/blob/main/1.3/img/3.png)
+![4](https://github.com/joos-net/kuber-homeworks/blob/main/1.3/img/4.png)
+![5](https://github.com/joos-net/kuber-homeworks/blob/main/1.3/img/5.png)
+![6](https://github.com/joos-net/kuber-homeworks/blob/main/1.3/img/6.png)
+
 5. Создать отдельный Pod с приложением multitool и убедиться с помощью `curl`, что из пода есть доступ до приложений из п.1.
+```yml
+apiVersion: v1
+kind: Pod
+metadata:
+  name: multitool
+spec:
+  containers:
+  - name: multitool
+    image: wbitt/network-multitool
+```
+![7](https://github.com/joos-net/kuber-homeworks/blob/main/1.3/img/7.png)
+
+[deployment.yml](https://github.com/joos-net/kuber-homeworks/blob/main/1.3/deployment.yml)
+
+[service.yml](https://github.com/joos-net/kuber-homeworks/blob/main/1.3/service.yml)
+
+[multitool.yml](https://github.com/joos-net/kuber-homeworks/blob/main/1.3/multitool.yml)
 
 ------
 
 ### Задание 2. Создать Deployment и обеспечить старт основного контейнера при выполнении условий
 
 1. Создать Deployment приложения nginx и обеспечить старт контейнера только после того, как будет запущен сервис этого приложения.
+```yml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: netology-deployment2
+  labels:
+    app: netology2
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: netology2
+  template:
+    metadata:
+      labels:
+        app: netology2
+    spec:
+      containers:
+      - name: nginx
+        image: nginx
+        ports:
+          - containerPort: 80
+      initContainers:
+      - name: delay
+        image: busybox
+        command: ['sleep', '60']
+```
 2. Убедиться, что nginx не стартует. В качестве Init-контейнера взять busybox.
+![8](https://github.com/joos-net/kuber-homeworks/blob/main/1.3/img/8.png)
 3. Создать и запустить Service. Убедиться, что Init запустился.
+```yml
+apiVersion: v1
+kind: Service
+metadata:
+  name: srv-netology2
+spec:
+  selector:
+    app: netology2
+  ports:
+    - protocol: TCP
+      port: 8080
+      targetPort: 80
+```
 4. Продемонстрировать состояние пода до и после запуска сервиса.
+![9](https://github.com/joos-net/kuber-homeworks/blob/main/1.3/img/9.png)
+
+![10](https://github.com/joos-net/kuber-homeworks/blob/main/1.3/img/10.png)
+
+[deployment2.yml](https://github.com/joos-net/kuber-homeworks/blob/main/1.3/deployment2.yml)
+
+[service2.yml](https://github.com/joos-net/kuber-homeworks/blob/main/1.3/service2.yml)
 
 ------
 
