--- a/1.4/1.4.md
+++ b/1.4/1.4.md
@@ -25,18 +25,113 @@
 ### Задание 1. Создать Deployment и обеспечить доступ к контейнерам приложения по разным портам из другого Pod внутри кластера
 
 1. Создать Deployment приложения, состоящего из двух контейнеров (nginx и multitool), с количеством реплик 3 шт.
+```yml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: netology-deployment
+  labels:
+    app: netology
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: netology
+  template:
+    metadata:
+      labels:
+        app: netology
+    spec:
+      containers:
+      - name: nginx
+        image: nginx:1.14.2
+        ports:
+          - containerPort: 80
+      - name: multitool
+        image: wbitt/network-multitool
+        ports:
+          - containerPort: 8080
+        env:
+        - name: HTTP_PORT
+          value: "8080"
+```
 2. Создать Service, который обеспечит доступ внутри кластера до контейнеров приложения из п.1 по порту 9001 — nginx 80, по 9002 — multitool 8080.
+```yml
+apiVersion: v1
+kind: Service
+metadata:
+  name: srv-netology
+spec:
+  selector:
+    app: netology
+  ports:
+    - name: nginx
+      protocol: TCP
+      port: 9001
+      targetPort: 80
+    - name: http-multitool
+      protocol: TCP
+      port: 9002
+      targetPort: 8080
+```
+![1](https://github.com/joos-net/kuber-homeworks/blob/main/1.4/img/1.png)
+
 3. Создать отдельный Pod с приложением multitool и убедиться с помощью `curl`, что из пода есть доступ до приложения из п.1 по разным портам в разные контейнеры.
+```yml
+apiVersion: v1
+kind: Pod
+metadata:
+  name: multitool
+spec:
+  containers:
+  - name: multitool
+    image: wbitt/network-multitool
+
+```
+![2](https://github.com/joos-net/kuber-homeworks/blob/main/1.4/img/2.png)
+
 4. Продемонстрировать доступ с помощью `curl` по доменному имени сервиса.
+
+![3](https://github.com/joos-net/kuber-homeworks/blob/main/1.4/img/3.png)
+
 5. Предоставить манифесты Deployment и Service в решении, а также скриншоты или вывод команды п.4.
+
+[deployment.yml](https://github.com/joos-net/kuber-homeworks/blob/main/1.4/deployment.yml)
+
+[service.yml](https://github.com/joos-net/kuber-homeworks/blob/main/1.4/service.yml)
+
+[multitool.yml](https://github.com/joos-net/kuber-homeworks/blob/main/1.4/multitool.yml)
 
 ------
 
 ### Задание 2. Создать Service и обеспечить доступ к приложениям снаружи кластера
 
 1. Создать отдельный Service приложения из Задания 1 с возможностью доступа снаружи кластера к nginx, используя тип NodePort.
+```yml
+apiVersion: v1
+kind: Service
+metadata:
+  name: srv-node-port
+spec:
+  selector:
+    app: netology
+  ports:
+  - name: nginx
+    protocol: TCP
+    nodePort: 30080
+    port: 80
+  - name: http-multitool
+    protocol: TCP
+    nodePort: 30880
+    port: 8080
+  type: NodePort
+```
 2. Продемонстрировать доступ с помощью браузера или `curl` с локального компьютера.
+
+![4](https://github.com/joos-net/kuber-homeworks/blob/main/1.4/img/4.png)
 3. Предоставить манифест и Service в решении, а также скриншоты или вывод команды п.2.
+
+[service-node-port.yml](https://github.com/joos-net/kuber-homeworks/blob/main/1.4/service-node-port.yml)
 
 ------
 
