--- a/1.5/1.5.md
+++ b/1.5/1.5.md
@@ -26,18 +26,122 @@
 ### Задание 1. Создать Deployment приложений backend и frontend
 
 1. Создать Deployment приложения _frontend_ из образа nginx с количеством реплик 3 шт.
+```yml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: netology-deployment-nginx
+  labels:
+    app: netology
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: netology
+  template:
+    metadata:
+      labels:
+        app: netology
+    spec:
+      containers:
+      - name: nginx
+        image: nginx:1.14.2
+        ports:
+          - containerPort: 80
+```
 2. Создать Deployment приложения _backend_ из образа multitool. 
+```yml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: netology-deployment-multitool
+  labels:
+    app: netology
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: netology
+  template:
+    metadata:
+      labels:
+        app: netology
+    spec:
+      containers:
+      - name: multitool
+        image: wbitt/network-multitool
+        ports:
+          - containerPort: 8080
+        env:
+        - name: HTTP_PORT
+          value: "8080"
+```
 3. Добавить Service, которые обеспечат доступ к обоим приложениям внутри кластера. 
+```yml
+apiVersion: v1
+kind: Service
+metadata:
+  name: srv-netology
+spec:
+  selector:
+    app: netology
+  ports:
+    - name: nginx
+      protocol: TCP
+      port: 9001
+      targetPort: 80
+    - name: http-multitool
+      protocol: TCP
+      port: 9002
+      targetPort: 8080
+```
 4. Продемонстрировать, что приложения видят друг друга с помощью Service.
 5. Предоставить манифесты Deployment и Service в решении, а также скриншоты или вывод команды п.4.
+
+![1](https://github.com/joos-net/kuber-homeworks/blob/main/1.5/img/1.png)
 
 ------
 
 ### Задание 2. Создать Ingress и обеспечить доступ к приложениям снаружи кластера
 
 1. Включить Ingress-controller в MicroK8S.
+```yml
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: minimal-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  ingressClassName: nginx
+  rules:
+  - host: joos-server.com
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: srv-netology
+            port:
+              number: 80
+      - path: /api
+        pathType: Prefix
+        backend:
+          service:
+            name: srv-netology
+            port:
+              number: 8080
+```
 2. Создать Ingress, обеспечивающий доступ снаружи по IP-адресу кластера MicroK8S так, чтобы при запросе только по адресу открывался _frontend_ а при добавлении /api - _backend_.
+
+![2](https://github.com/joos-net/kuber-homeworks/blob/main/1.5/img/2.png)
+
 3. Продемонстрировать доступ с помощью браузера или `curl` с локального компьютера.
+
+![3](https://github.com/joos-net/kuber-homeworks/blob/main/1.5/img/3.png)
+![4](https://github.com/joos-net/kuber-homeworks/blob/main/1.5/img/4.png)
+
 4. Предоставить манифесты и скриншоты или вывод команды п.2.
 
 ------
