--- a/2.1/2.1.md
+++ b/2.1/2.1.md
@@ -29,10 +29,57 @@
 Создать Deployment приложения, состоящего из двух контейнеров и обменивающихся данными.
 
 1. Создать Deployment приложения, состоящего из контейнеров busybox и multitool.
+```yml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: netology-deployment
+  labels:
+    app: netology
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: netology
+  template:
+    metadata:
+      labels:
+        app: netology
+    spec:
+      containers:
+      - name: busybox
+        image: busybox
+        command: ['sh', '-c', 'while true; do date >> /output/success.txt; sleep 5; done']
+        volumeMounts:
+          - name: vol
+            mountPath: /output
+      - name: multitool
+        image: wbitt/network-multitool
+        volumeMounts:
+          - name: vol
+            mountPath: /input
+            readOnly: true
+      volumes:
+        - name: vol
+          hostPath:
+            path: /opt
+            type: Directory
+```
 2. Сделать так, чтобы busybox писал каждые пять секунд в некий файл в общей директории.
+```sh
+command: ['sh', '-c', 'while true; do date >> /output/success.txt; sleep 5; done']
+```
 3. Обеспечить возможность чтения файла контейнером multitool.
+```yml
+        volumeMounts:
+          - name: vol
+            mountPath: /input
+            readOnly: true
+```
 4. Продемонстрировать, что multitool может читать файл, который периодоически обновляется.
 5. Предоставить манифесты Deployment в решении, а также скриншоты или вывод команды из п. 4.
+
+![1](https://github.com/joos-net/kuber-homeworks/blob/main/2.1/img/1.png)
 
 ------
 
@@ -43,9 +90,41 @@
 Создать DaemonSet приложения, которое может прочитать логи ноды.
 
 1. Создать DaemonSet приложения, состоящего из multitool.
+```yml
+apiVersion: apps/v1
+kind: DaemonSet
+metadata:
+  name: log-syslog
+spec:
+  selector:
+    matchLabels:
+      name: log-syslog
+  template:
+    metadata:
+      labels:
+        name: log-syslog
+    spec:
+      containers:
+      - name: log-syslog
+        image: wbitt/network-multitool
+        volumeMounts:
+        - name: varlog
+          mountPath: /syslog
+      volumes:
+      - name: varlog
+        hostPath:
+          path: /var/log/syslog
+```
 2. Обеспечить возможность чтения файла `/var/log/syslog` кластера MicroK8S.
+```yml
+        volumeMounts:
+        - name: varlog
+          mountPath: /syslog
+```
 3. Продемонстрировать возможность чтения файла изнутри пода.
 4. Предоставить манифесты Deployment, а также скриншоты или вывод команды из п. 2.
+
+![2](https://github.com/joos-net/kuber-homeworks/blob/main/2.1/img/2.png)
 
 ------
 
