--- a/2.2/2.2.md
+++ b/2.2/2.2.md
@@ -30,11 +30,91 @@
 Создать Deployment приложения, использующего локальный PV, созданный вручную.
 
 1. Создать Deployment приложения, состоящего из контейнеров busybox и multitool.
+```yml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: netology-deployment
+  labels:
+    app: netology
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: netology
+  template:
+    metadata:
+      labels:
+        app: netology
+    spec:
+      containers:
+      - name: busybox
+        image: busybox
+        command: ['sh', '-c', 'while true; do date >> /output/success.txt; sleep 5; done']
+        volumeMounts:
+          - name: vol
+            mountPath: /output
+      - name: multitool
+        image: wbitt/network-multitool
+        volumeMounts:
+          - name: vol
+            mountPath: /input
+            readOnly: true
+      volumes:
+        - name: vol
+          persistentVolumeClaim:
+            claimName: my-pvc
+```
 2. Создать PV и PVC для подключения папки на локальной ноде, которая будет использована в поде.
+```yml
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: my-pv
+spec:
+  capacity:
+    storage: 1Gi
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: ""
+  hostPath:
+    path: /mnt
+```
+```yml
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: my-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: ""
+  resources:
+    requests:
+      storage: 1Gi
+```
+
+![1](https://github.com/joos-net/kuber-homeworks/blob/main/2.2/img/1.png)
+
 3. Продемонстрировать, что multitool может читать файл, в который busybox пишет каждые пять секунд в общей директории. 
+
+![2](https://github.com/joos-net/kuber-homeworks/blob/main/2.2/img/2.png)
+
 4. Удалить Deployment и PVC. Продемонстрировать, что после этого произошло с PV. Пояснить, почему.
+```
+Статус PV поменялся - перешел в состояние Released, так как был удален PVC
+```
+![3](https://github.com/joos-net/kuber-homeworks/blob/main/2.2/img/3.png)
+
 5. Продемонстрировать, что файл сохранился на локальном диске ноды. Удалить PV.  Продемонстрировать что произошло с файлом после удаления PV. Пояснить, почему.
-5. Предоставить манифесты, а также скриншоты или вывод необходимых команд.
+```
+Файл остался на диске, так как установлен параметр - persistentVolumeReclaimPolicy: Retain
+(после удаления PV ресурсы из внешних провайдеров автоматически не удаляются)
+```
+![4](https://github.com/joos-net/kuber-homeworks/blob/main/2.2/img/4.png)
+
+6. Предоставить манифесты, а также скриншоты или вывод необходимых команд.
 
 ------
 
@@ -45,8 +125,73 @@
 Создать Deployment приложения, которое может хранить файлы на NFS с динамическим созданием PV.
 
 1. Включить и настроить NFS-сервер на MicroK8S.
+
+https://microk8s.io/docs/how-to-nfs
+
 2. Создать Deployment приложения состоящего из multitool, и подключить к нему PV, созданный автоматически на сервере NFS.
+```yml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: netology-deployment
+  labels:
+    app: netology
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: netology
+  template:
+    metadata:
+      labels:
+        app: netology
+    spec:
+      containers:
+      - name: multitool
+        image: wbitt/network-multitool
+        volumeMounts:
+          - name: vol
+            mountPath: /input
+      volumes:
+        - name: vol
+          persistentVolumeClaim:
+            claimName: my-pvc-nfs
+```
+```yml
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: nfs-csi
+provisioner: nfs.csi.k8s.io
+parameters:
+  server: 192.168.10.22
+  share: /srv/nfs
+reclaimPolicy: Delete
+volumeBindingMode: Immediate
+mountOptions:
+  - hard
+  - nfsvers=4.1
+```
+```yml
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: my-pvc-nfs
+spec:
+  storageClassName: nfs-csi
+  accessModes: [ReadWriteOnce]
+  resources:
+    requests:
+      storage: 5Gi
+```
+
+![5](https://github.com/joos-net/kuber-homeworks/blob/main/2.2/img/5.png)
+
 3. Продемонстрировать возможность чтения и записи файла изнутри пода. 
+
+![6](https://github.com/joos-net/kuber-homeworks/blob/main/2.2/img/6.png)
+![7](https://github.com/joos-net/kuber-homeworks/blob/main/2.2/img/7.png)
+
 4. Предоставить манифесты, а также скриншоты или вывод необходимых команд.
 
 ------
