--- a/2.3/2.3.md
+++ b/2.3/2.3.md
@@ -25,9 +25,103 @@
 ### Задание 1. Создать Deployment приложения и решить возникшую проблему с помощью ConfigMap. Добавить веб-страницу
 
 1. Создать Deployment приложения, состоящего из контейнеров nginx и multitool.
+```yml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: netology-deployment
+  labels:
+    app: netology
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: netology
+  template:
+    metadata:
+      labels:
+        app: netology
+    spec:
+      containers:
+      - name: nginx
+        image: nginx:1.14.2
+        volumeMounts:
+        - name: config
+          mountPath: "/etc/nginx/conf.d/"
+          readOnly: true
+        - name: index
+          mountPath: /usr/share/nginx/html/
+          readOnly: true
+      - name: multitool
+        image: wbitt/network-multitool
+      volumes:
+      - name: config
+        configMap:
+          name: nginx-default
+      - name: index
+        configMap:
+          name: nginx-index
+```
 2. Решить возникшую проблему с помощью ConfigMap.
+```yml
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: nginx-default
+data:
+  default.conf: |
+    server {
+        listen       8080;
+        server_name  localhost;
+        location / {
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+        }
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   /usr/share/nginx/html;
+        }
+    }
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: nginx-index
+data:
+  index.html: |
+    <!DOCTYPE html>
+    <html>
+    <head>
+    <title>Welcome to nginx!</title>
+    </head>
+    <body>
+    <h1>Welcome to nginx!</h1>
+    <p> Netology Kubernetes</p>
+    </body>
+    </html>
+```
 3. Продемонстрировать, что pod стартовал и оба конейнера работают.
+
+![1](https://github.com/joos-net/kuber-homeworks/blob/main/2.3/img/1.png)
+
 4. Сделать простую веб-страницу и подключить её к Nginx с помощью ConfigMap. Подключить Service и показать вывод curl или в браузере.
+```yml
+apiVersion: v1
+kind: Service
+metadata:
+  name: srv-nginx
+spec:
+  selector:
+    app: netology
+  ports:
+    - name: nginx
+      protocol: TCP
+      port: 80
+      targetPort: 8080
+```
+
+![2](https://github.com/joos-net/kuber-homeworks/blob/main/2.3/img/2.png)
+
 5. Предоставить манифесты, а также скриншоты или вывод необходимых команд.
 
 ------
@@ -35,10 +129,121 @@
 ### Задание 2. Создать приложение с вашей веб-страницей, доступной по HTTPS 
 
 1. Создать Deployment приложения, состоящего из Nginx.
+```yml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: netology-deployment
+  labels:
+    app: netology
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: netology
+  template:
+    metadata:
+      labels:
+        app: netology
+    spec:
+      containers:
+      - name: nginx
+        image: nginx:1.14.2
+        ports:
+          - containerPort: 80
+        volumeMounts:
+        - name: index
+          mountPath: /usr/share/nginx/html/
+          readOnly: true
+      volumes:
+      - name: index
+        configMap:
+          name: nginx-index
+```
 2. Создать собственную веб-страницу и подключить её как ConfigMap к приложению.
+```yml
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: nginx-index
+data:
+  index.html: |
+    <!DOCTYPE html>
+    <html>
+    <head>
+    <title>Welcome to nginx!</title>
+    </head>
+    <body>
+    <h1>Welcome to nginx!</h1>
+    <h1> Netology Kubernetes SSL</h1>
+    </body>
+    </html>
+```
 3. Выпустить самоподписной сертификат SSL. Создать Secret для использования сертификата.
+```yml
+apiVersion: v1
+kind: Secret
+metadata:
+  name: nginx-tls
+data:
+  tls.crt: |
+    MIIDkTCCAnmgAwIBAgIUAuZ01C74+YV5M2Tfa0H3xNFvWeAwDQYJKoZIhvcNAQEL
+    ...
+    dEkSKxA=
+  tls.key: |
+    MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQCnSUbDYXWJqI/g
+    ...
+    y3PyA9O/uGxALfq1v+ZxKL0=
+type: kubernetes.io/tl
+```
 4. Создать Ingress и необходимый Service, подключить к нему SSL в вид. Продемонстировать доступ к приложению по HTTPS. 
-4. Предоставить манифесты, а также скриншоты или вывод необходимых команд.
+```yml
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: my-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  ingressClassName: nginx
+  rules:
+  - host: joos-server.com
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: srv-nginx
+            port:
+              number: 80
+  tls:
+    - hosts:
+      - joos-server.com
+      secretName: nginx-tls
+```
+```yml
+apiVersion: v1
+kind: Service
+metadata:
+  name: srv-nginx
+spec:
+  selector:
+    app: netology
+  ports:
+    - name: nginx
+      protocol: TCP
+      port: 80
+      targetPort: 80
+```
+
+![3](https://github.com/joos-net/kuber-homeworks/blob/main/2.3/img/3.png)
+
+5. Предоставить манифесты, а также скриншоты или вывод необходимых команд.
+
+![4](https://github.com/joos-net/kuber-homeworks/blob/main/2.3/img/4.png)
+
+![5](https://github.com/joos-net/kuber-homeworks/blob/main/2.3/img/5.png)
 
 ------
 
