--- a/2.4/2.4.md
+++ b/2.4/2.4.md
@@ -1,1 +1,78 @@
-# Домашнее задание к занятию «Управление доступом»### Цель заданияВ тестовой среде Kubernetes нужно предоставить ограниченный доступ пользователю.------### Чеклист готовности к домашнему заданию1. Установлено k8s-решение, например MicroK8S.2. Установленный локальный kubectl.3. Редактор YAML-файлов с подключённым github-репозиторием.------### Инструменты / дополнительные материалы, которые пригодятся для выполнения задания1. [Описание](https://kubernetes.io/docs/reference/access-authn-authz/rbac/) RBAC.2. [Пользователи и авторизация RBAC в Kubernetes](https://habr.com/ru/company/flant/blog/470503/).3. [RBAC with Kubernetes in Minikube](https://medium.com/@HoussemDellai/rbac-with-kubernetes-in-minikube-4deed658ea7b).------### Задание 1. Создайте конфигурацию для подключения пользователя1. Создайте и подпишите SSL-сертификат для подключения к кластеру.2. Настройте конфигурационный файл kubectl для подключения.3. Создайте роли и все необходимые настройки для пользователя.4. Предусмотрите права пользователя. Пользователь может просматривать логи подов и их конфигурацию (`kubectl logs pod <pod_id>`, `kubectl describe pod <pod_id>`).5. Предоставьте манифесты и скриншоты и/или вывод необходимых команд.------### Правила приёма работы1. Домашняя работа оформляется в своём Git-репозитории в файле README.md. Выполненное домашнее задание пришлите ссылкой на .md-файл в вашем репозитории.2. Файл README.md должен содержать скриншоты вывода необходимых команд `kubectl`, скриншоты результатов.3. Репозиторий должен содержать тексты манифестов или ссылки на них в файле README.md.------
+# Домашнее задание к занятию «Управление доступом»
+
+### Цель задания
+
+В тестовой среде Kubernetes нужно предоставить ограниченный доступ пользователю.
+
+------
+
+### Чеклист готовности к домашнему заданию
+
+1. Установлено k8s-решение, например MicroK8S.
+2. Установленный локальный kubectl.
+3. Редактор YAML-файлов с подключённым github-репозиторием.
+
+------
+
+### Инструменты / дополнительные материалы, которые пригодятся для выполнения задания
+
+1. [Описание](https://kubernetes.io/docs/reference/access-authn-authz/rbac/) RBAC.
+2. [Пользователи и авторизация RBAC в Kubernetes](https://habr.com/ru/company/flant/blog/470503/).
+3. [RBAC with Kubernetes in Minikube](https://medium.com/@HoussemDellai/rbac-with-kubernetes-in-minikube-4deed658ea7b).
+
+------
+
+### Задание 1. Создайте конфигурацию для подключения пользователя
+
+1. Создайте и подпишите SSL-сертификат для подключения к кластеру.
+```
+openssl genrsa -out joos.key 2048
+openssl req -new -key joos.key -out joos.csr -subj "/CN=joos/O=ops"
+openssl x509 -req -in joos.csr -CA ca.crt -CAkey ca.key -CAcreateserial -out joos.crt -days 500
+kubectl config set-credentials joos --client-certificate=joos.crt --client-key=joos.key --embed-certs=true
+microk8s enable rbac
+kubectl config set-context joos --cluster=microk8s-cluster --user=joos
+kubectl config get-contexts
+```
+2. Настройте конфигурационный файл kubectl для подключения.
+![1](https://github.com/joos-net/kuber-homeworks/blob/main/2.4/img/1.png)
+3. Создайте роли и все необходимые настройки для пользователя.
+```yml
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: joos-role
+rules:
+- apiGroups: [""]
+  resources: ["pods","pods/log"]
+  verbs: ["get", "watch", "list"]
+```
+```yml
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: joos-rb
+subjects:
+- kind: User
+  name: joos
+  apiGroup: rbac.authorization.k8s.io
+roleRef:
+  kind: Role
+  name: joos-role
+  apiGroup: rbac.authorization.k8s.io
+```
+4. Предусмотрите права пользователя. Пользователь может просматривать логи подов и их конфигурацию (`kubectl logs pod <pod_id>`, `kubectl describe pod <pod_id>`).
+![2](https://github.com/joos-net/kuber-homeworks/blob/main/2.4/img/2.png)
+![3](https://github.com/joos-net/kuber-homeworks/blob/main/2.4/img/3.png)
+5. Предоставьте манифесты и скриншоты и/или вывод необходимых команд.
+
+------
+
+### Правила приёма работы
+
+1. Домашняя работа оформляется в своём Git-репозитории в файле README.md. Выполненное домашнее задание пришлите ссылкой на .md-файл в вашем репозитории.
+2. Файл README.md должен содержать скриншоты вывода необходимых команд `kubectl`, скриншоты результатов.
+3. Репозиторий должен содержать тексты манифестов или ссылки на них в файле README.md.
+
+------
+
