--- a/2.4/2.4.md
+++ b/2.4/2.4.md
@@ -66,6 +66,10 @@ roleRef:
 ![3](https://github.com/joos-net/kuber-homeworks/blob/main/2.4/img/3.png)
 5. Предоставьте манифесты и скриншоты и/или вывод необходимых команд.
 
+[kube-role.yml](https://github.com/joos-net/kuber-homeworks/blob/main/2.4/kube-role.yml)
+
+[kube-role-binding.yml](https://github.com/joos-net/kuber-homeworks/blob/main/2.4/kube-role-binding.yml)
+
 ------
 
 ### Правила приёма работы
