--- a/2.5/2.5.md
+++ b/2.5/2.5.md
@@ -25,6 +25,9 @@
 
 1. Необходимо упаковать приложение в чарт для деплоя в разные окружения. 
 ![1](https://github.com/joos-net/kuber-homeworks/blob/main/2.5/img/1.png)
+
+[my-nginx](https://github.com/joos-net/kuber-homeworks/tree/main/2.5/my-nginx)
+
 2. Каждый компонент приложения деплоится отдельным deployment’ом или statefulset’ом.
 ![2](https://github.com/joos-net/kuber-homeworks/blob/main/2.5/img/2.png)
 3. В переменных чарта измените образ приложения для изменения версии.
@@ -41,6 +44,7 @@
 ![6](https://github.com/joos-net/kuber-homeworks/blob/main/2.5/img/6.png)
 ![7](https://github.com/joos-net/kuber-homeworks/blob/main/2.5/img/7.png)
 
+[my-nginx](https://github.com/joos-net/kuber-homeworks/tree/main/2.5/my-nginx)
 
 ### Правила приёма работы
 
