--- a/3.1/3.1.md
+++ b/3.1/3.1.md
@@ -22,6 +22,35 @@
 4. Фронтенд обрабатывает внешние запросы быстро, отдавая статику. Потребляет не более 50 МБ ОЗУ на каждый экземпляр, 0.2 ядра. 5 копий. 
 5. Бекенд потребляет 600 МБ ОЗУ и по 1 ядру на копию. 10 копий.
 
+### Решение
+Требуемые ресурсы
+|          | Процессор | Оперативная память (Гб) | Копии | Итого процессор | Итого память (Гб) |
+|----------|-----------|----------------------|---------|---------------------|-------------------------------|
+| DB       | 1         | 4                    | 3       | 3                   | 12                            |
+| Cash     | 1         | 4                    | 3       | 3                   | 12                            |
+| Frontend | 0,2       | 0,05                 | 5       | 1                   | 0,25                          |
+| Backend  | 1         | 0,6                  | 10      | 10                  | 6                             |
+
+Для создания отказоустойчивого кластера нам необходимо 3 мастера и 3 воркера.
+
+На мастера мы рабочие приложения не ставим, тогда минимум необходимый для мастер нод
+|              | Процессор | Оперативная память | Копии   | Итого процессор   | Итого память (Гб) |
+|--------------| --------- | ------------------ | ------- | ------------------| ----------------- |
+| Master Nodes |   2       |   2                 | 3      | 6                 | 6                 |
+
+Для воркеров нам необходимо обеспечить работу в случае выхода из строя 1 ноды, поэтому 2 ноды должны держать полную нагрузку, значит необходимо распределить на 2 воркер ноды 30,25 Гб и 17 ядер
+
+Получаем 16 Гб оперативной памяти и 9 ядер на 1 воркер ноду
+|              | Процессор | Оперативная память | Копии   | Итого процессор   | Итого память (Гб) |
+|--------------| --------- | ------------------ | ------- | ------------------| ----------------- |
+| Master Nodes |   9       |   16               | 3       | 27                | 48                |
+
+Минимальный отказоустойчивый кластер для поставленной задачи
+|              | Процессор | Оперативная память |
+|--------------| --------- | ------------------ |
+| Cluster      |   33 ядра |   54 Гб            |
+
+
 ----
 
 ### Правила приёма работы
