--- a/3.1/3.1.md
+++ b/3.1/3.1.md
@@ -22,7 +22,7 @@
 4. Фронтенд обрабатывает внешние запросы быстро, отдавая статику. Потребляет не более 50 МБ ОЗУ на каждый экземпляр, 0.2 ядра. 5 копий. 
 5. Бекенд потребляет 600 МБ ОЗУ и по 1 ядру на копию. 10 копий.
 
-### Решение
+### Решение123
 Требуемые ресурсы
 |          | Процессор | Оперативная память (Гб) | Копии | Итого процессор | Итого память (Гб) |
 |----------|-----------|----------------------|---------|---------------------|-------------------------------|
