--- a/3.3/3.3.md
+++ b/3.3/3.3.md
@@ -21,8 +21,31 @@
 1. Создать deployment'ы приложений frontend, backend и cache и соответсвующие сервисы.
 2. В качестве образа использовать network-multitool.
 3. Разместить поды в namespace App.
+
+[deployment-backend]
+[deployment-frontend]
+[deployment-cache]
+![1](https://github.com/joos-net/kuber-homeworks/blob/main/3.3/img/1.png)
+![2](https://github.com/joos-net/kuber-homeworks/blob/main/3.3/img/2.png)
+
 4. Создать политики, чтобы обеспечить доступ frontend -> backend -> cache. Другие виды подключений должны быть запрещены.
+
+![3](https://github.com/joos-net/kuber-homeworks/blob/main/3.3/img/3.png)
+
 5. Продемонстрировать, что трафик разрешён и запрещён.
+
+**frontend**
+
+![4](https://github.com/joos-net/kuber-homeworks/blob/main/3.3/img/4.png)
+
+**backend**
+
+![5](https://github.com/joos-net/kuber-homeworks/blob/main/3.3/img/5.png)
+
+**cache**
+
+![6](https://github.com/joos-net/kuber-homeworks/blob/main/3.3/img/6.png)
+
 
 ### Правила приёма работы
 
