--- a/3.3/3.3.md
+++ b/3.3/3.3.md
@@ -22,27 +22,35 @@
 2. В качестве образа использовать network-multitool.
 3. Разместить поды в namespace App.
 
-[deployment-backend]
-[deployment-frontend]
-[deployment-cache]
+- [deployment-frontend](https://github.com/joos-net/kuber-homeworks/blob/main/3.3/deployment-frontend.yml)
+- [deployment-backend](https://github.com/joos-net/kuber-homeworks/blob/main/3.3/deployment-backend.yml)
+- [deployment-cache](https://github.com/joos-net/kuber-homeworks/blob/main/3.3/deployment-cache.yml)
+- [service-frontend](https://github.com/joos-net/kuber-homeworks/blob/main/3.3/service-frontend.yml)
+- [service-backend](https://github.com/joos-net/kuber-homeworks/blob/main/3.3/service-backend.yml)
+- [service-cache](https://github.com/joos-net/kuber-homeworks/blob/main/3.3/service-cache.yml)
+
 ![1](https://github.com/joos-net/kuber-homeworks/blob/main/3.3/img/1.png)
 ![2](https://github.com/joos-net/kuber-homeworks/blob/main/3.3/img/2.png)
 
 4. Создать политики, чтобы обеспечить доступ frontend -> backend -> cache. Другие виды подключений должны быть запрещены.
 
+- [deny](https://github.com/joos-net/kuber-homeworks/blob/main/3.3/deny.yml)
+- [allow-front-to-back](https://github.com/joos-net/kuber-homeworks/blob/main/3.3/allow-front-to-back.yml)
+- [allow-back-to-cache](https://github.com/joos-net/kuber-homeworks/blob/main/3.3/allow-back-to-cache.yml)
+
 ![3](https://github.com/joos-net/kuber-homeworks/blob/main/3.3/img/3.png)
 
 5. Продемонстрировать, что трафик разрешён и запрещён.
 
-**frontend**
+**frontend** (frontend -> backend -> cache)
 
 ![4](https://github.com/joos-net/kuber-homeworks/blob/main/3.3/img/4.png)
 
-**backend**
+**backend** (frontend -> backend -> cache)
 
 ![5](https://github.com/joos-net/kuber-homeworks/blob/main/3.3/img/5.png)
 
-**cache**
+**cache** (frontend -> backend -> cache)
 
 ![6](https://github.com/joos-net/kuber-homeworks/blob/main/3.3/img/6.png)
 
