--- a/3.4/3.4.md
+++ b/3.4/3.4.md
@@ -23,12 +23,69 @@
 4. Обновление мажорное, новые версии приложения не умеют работать со старыми.
 5. Вам нужно объяснить свой выбор стратегии обновления приложения.
 
+Оптимальным и безопасным вариантом без простоя будет стратегия **Rolling Update.** Причем мы можем задать параметры для обновления:
+```
+maxSurge: 20%
+maxUnavailable: 20%
+```
+Но нужно более детальное понимание по четвертому пункту:
+- если мажорное обновление не позволяет работать приложениям одновременно с окружением (backend), то выберем стратегию - **Recreate**
+- если мажорное обновление не совместимо с приложением у клиента, то необходимо обеспечить какое то время одновременную работу двух приложений, тут подойдет стратегия **Canary**, с постепенным переводом всех клиентов на новую версию.
+
 ### Задание 2. Обновить приложение
 
 1. Создать deployment приложения с контейнерами nginx и multitool. Версию nginx взять 1.19. Количество реплик — 5.
+
+```yml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: netology-d
+  labels:
+    app: netology
+spec:
+  replicas: 5
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 100%
+      maxUnavailable: 0%
+  selector:
+    matchLabels:
+      app: netology
+  template:
+    metadata:
+      labels:
+        app: netology
+    spec:
+      containers:
+      - name: nginx
+        image: nginx:1.19
+        ports:
+          - containerPort: 80
+      - name: multitool
+        image: wbitt/network-multitool
+        ports:
+          - containerPort: 8080
+        env:
+        - name: HTTP_PORT
+          value: "8080"
+```
+
+![1](https://github.com/joos-net/kuber-homeworks/blob/main/3.4/img/1.png)
+
 2. Обновить версию nginx в приложении до версии 1.20, сократив время обновления до минимума. Приложение должно быть доступно.
+
+![2](https://github.com/joos-net/kuber-homeworks/blob/main/3.4/img/2.png)
+
 3. Попытаться обновить nginx до версии 1.28, приложение должно оставаться доступным.
+
+![3](https://github.com/joos-net/kuber-homeworks/blob/main/3.4/img/3.png)
+![4](https://github.com/joos-net/kuber-homeworks/blob/main/3.4/img/4.png)
+
 4. Откатиться после неудачного обновления.
+
+![5](https://github.com/joos-net/kuber-homeworks/blob/main/3.4/img/5.png)
 
 ## Дополнительные задания — со звёздочкой*
 
